<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_log_in">LogInActivity</string>
    <string name="username_field_hint_text">username</string>
    <string name="password_field_hint_text">password</string>
    <string name="sign_in_button_text">Log In</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="or_text">OR</string>

    <string name="title_activity_customer_sign_up_page_one">CustomerSignUpPageOne</string>
    <string name="first_name_field_hint_text">First name</string>
    <string name="last_name_field_hint_text">Last name</string>
    <string name="email_field_hint_text">Email</string>
    <string name="password_hint_text">Create password</string>
    <string name="repeat_password_hint_text">Repeat password</string>
    <string name="proceed_button_text">proceed</string>

    <string name="title_activity_customer_sign_up_page_two">CustomerSignUpPageTwo</string>
    <string name="mobile_number_field_hint_text">10 digit mobile number</string>
    <string name="house_no_field_hint_text">House N0.</string>
    <string name="street_field_hint_text">Street</string>
    <string name="locality_field_hint_text">Locality</string>
    <string name="post_code_field_hint_text">Post Code</string>
    <string name="sign_up_now_button_text">Sign Up Now</string>

    <string name="title_activity_sign_up_choice">SignUpChoiceActivity</string>
    <string name="customer_sign_up_button_text">As a Customer</string>
    <string name="tradesman_sign_up_button_text">As a Tradesman</string>

    <string name="title_activity_tradesman_sign_up_page_one">TradesmanSignUpPageOneActivity</string>
    <string name="title_activity_tradesman_sign_up_page_two">TradesmanSignUpPageTwoActivity</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="userbar_home_edit_option_text">Edit</string>
    <string name="application_title">HumLog</string>
    <string name="selectionbar_home_search_button_text">search</string>

    <string-array name="sampleList">
        <item>item one</item>
        <item>item two</item>
    </string-array>
    <string name="title_activity_launcher">LauncherActivity</string>

    <string name="title_activity_post_ad">PostAdActivity</string>
    <string name = "post_ad_activity_select_trade_title">Select one trade and city for the advertisement</string>
    <string name="post_ad_multiline_text_view">Write some details about your ad in less than 120 characters</string>
    <string name="post_ad_multiline_text_view_hint">Write ad details</string>
    <string name="post_ad_post_ad_button_text">Post Ad</string>


    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit_profile_save_changes_button_text">Save Changes</string>
    <string name="edit_profile_delete_account_button_text">Delete Account</string>
    <string name="title_activity_my_ad">MyAdActivity</string>

    <string name="my_ad_row_delete_ad_button_text">Delete Ad</string>
    <string name="my_ad_row_trade_text">Trade :</string>
    <string name="my_ad_row_city_text">City :</string>

    <string name="title_activity_trade_profile">TradeProfileActivity</string>
    <string name = "trade_profile_activity_select_trade_title">Select one trade and city to choose for work</string>
    <string name="trade_profile_multiline_text_view">Write some details about yourself less than 120 characters</string>
    <string name="trade_profile_multiline_text_view_hint">Write your details</string>
    <string name="trade_profile_save_data_button_text">Save</string>

    <string name="title_activity_my_rating">MyRatingActivity</string>
    <string name="my_rating_rating_text">Ratings</string>
    <string name="my_rating_jobs_done_text">Jobs Done</string>
    <string name="my_rating_total_score_text">Total Score</string>
    <string name="my_rating_detail_text">Ask your customers, you worked for to rate you. Good ratings will help to
        increase your score</string>
    <string name="title_activity_my_interest">MyInterestActivity</string>
</resources>
