<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LogInActivity"
    android:background="#ff0aff62"
    android:id="@+id/logInRelativeLayout">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logInUsernameField"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="126dp"
        android:textSize="30sp"
        android:background="#ffffffff"
        android:hint="@string/username_field_hint_text"
        android:lines="1"
        android:singleLine="true"
        android:maxLength="40" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/logInPasswordField"
        android:hint="@string/password_field_hint_text"
        android:textSize="30sp"
        android:background="#ffffffff"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="176dp"
        android:lines="1"
        android:singleLine="true"
        android:maxLength="15" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button_text"
        android:id="@+id/logInSignInButton"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="226dp"
        android:background="#fff54d70"
        android:textSize="30sp"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        android:id="@+id/logInSignUpButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="376dp"
        android:textSize="30sp"
        android:background="#ff0aff62"
        android:textColor="#ff000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_text"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_below="@+id/logInSignInButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="306dp"
        android:layout_marginLeft="136dp"
        android:layout_marginStart="136dp" />

</RelativeLayout>
