<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.praduman.humlog.CustomerSignUpPageOneActivity"
    android:background="#ff0aff62"
    android:id="@+id/customerSignUpPageOneRelativeLayout">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name_field_hint_text"
        android:ems="10"
        android:id="@+id/customerSignUpPageOneFirstNameField"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:background="#ffffffff"
        android:textSize="30sp"
        android:maxLength="20"
        android:singleLine="true"
        android:lines="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name_field_hint_text"
        android:ems="10"
        android:id="@+id/customerSignUpPageOneLastNameField"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:textSize="30sp"
        android:background="#ffffffff"
        android:maxLength="20"
        android:singleLine="true"
        android:lines="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_field_hint_text"
        android:ems="10"
        android:id="@+id/customerSignUpPageOneEmailField"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:textSize="30sp"
        android:background="#ffffffff"
        android:maxLength="40"
        android:singleLine="true"
        android:lines="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint_text"
        android:ems="10"
        android:id="@+id/customerSignUpPageOnePasswordField"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="240dp"
        android:textSize="30sp"
        android:background="#ffffffff"
        android:maxLength="15"
        android:singleLine="true"
        android:lines="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repeat_password_hint_text"
        android:ems="10"
        android:id="@+id/customerSignUpPageOneRepeatPasswordField"
        android:layout_below="@+id/customerSignUpPageOnePasswordField"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:textSize="30sp"
        android:background="#ffffffff"
        android:maxLength="15"
        android:singleLine="true"
        android:lines="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed_button_text"
        android:id="@+id/customerSignUpPageOneProceedButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#fff54d70"
        android:textSize="30sp"
        android:textColor="#ffffffff" />
</RelativeLayout>
