<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.praduman.humlog.TradeProfileActivity"
    android:background="#ff0aff62">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_profile_activity_select_trade_title"
        android:id="@+id/tradeProfileSelectTradeTitle"
        android:textColor="#ffffffff"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/tradeProfileSelectTradeSpinner"
        android:layout_below="@+id/tradeProfileSelectTradeTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/tradeProfileSelectCitySpinner"
        android:layout_below="@+id/tradeProfileSelectTradeTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_profile_multiline_text_view"
        android:id="@+id/tradeProfileDetailTextView"
        android:layout_below="@+id/tradeProfileSelectTradeSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="87dp"
        android:textColor="#ffffffff"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/tradeProfiledMultilineTextView"
        android:layout_below="@+id/tradeProfileDetailTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:hint="@string/trade_profile_multiline_text_view_hint"
        android:background="#ffffffff"
        android:maxLines="4"
        android:lines="4"
        android:singleLine="false"
        android:maxLength="120"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trade_profile_save_data_button_text"
        android:id="@+id/tradeProfileSaveButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#fff54d70"
        android:textColor="#ffffffff"
        android:textSize="20sp" />

</RelativeLayout>
